--- a/test/esp32/Makefile.old
+++ b/test/esp32/Makefile.old
@@ -1,7 +1,7 @@
-COMPONENT_SRCDIRS := .
+PROJECT_NAME := hello-world
 CPPFLAGS += -Wno-error=switch -Wno-error=maybe-uninitialized
 EXTRA_COMPONENT_DIRS += $(IDF_PATH)/components
 EXTRA_COMPONENT_DIRS += ../../
-PROJECT_NAME := soulmate
+COMPONENT_SRCDIRS := .
 MAKEFLAGS +=
 include $(IDF_PATH)/make/project.mk
