--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -4,12 +4,10 @@ jobs:
   esp32-test:
     runs-on: ubuntu-latest
     name: Test with ESP-IDF
+    container: espressif/idf:release-v3.3
     steps:
       - name: check out
         uses: actions/checkout@v2
+        path: /project
       - name: test
-        uses: docker://espressif/idf:release-v3.3
-        with:
-          entrypoint: /project
-          args: make -j4
-        # run: docker run --rm -v $PWD:/project -w /project make -j4
+        run: make -C /project/test/esp32/run.sh
