--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - name: check out
         uses: actions/checkout@v2
-        path: /project
+        with:
+          path: /project
       - name: test
         run: make -C /project/test/esp32/run.sh
