--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -4,11 +4,13 @@ jobs:
   esp32-test:
     runs-on: ubuntu-latest
     name: Test with ESP-IDF
-    container: espressif/idf:release-v3.3
     steps:
       - name: check out
         uses: actions/checkout@v2
-        with:
-          path: ./project
       - name: test
+        container:
+        image: espressif/idf:release-v3.3
+        volumes:
+          - .:/project
+        options: --cpus 1
         run: make -C /project/test/esp32/run.sh
