--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -12,5 +12,6 @@ jobs:
     steps:
       - name: check out
         uses: actions/checkout@v2
+        path: /project
       - name: test
         run: make -C /project/test/esp32/run.sh
