--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -10,7 +10,5 @@ jobs:
     steps:
       - name: check out
         uses: actions/checkout@v2
-        with:
-          path: /project
       - name: test
-        run: make -C /project/test/esp32/run.sh
+        run: make -C ./test/esp32/run.sh
