--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -13,6 +13,6 @@ jobs:
       - name: pwd
         run: pwd
       - name: ls -lah
-        run: ls -lah
+        run: ls -lah test/esp32
       - name: test
-        run: make -C ./test/esp32/run.sh
+        run: make -C test/esp32/run.sh
