--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - name: check out
         uses: actions/checkout@v2
+      - name: check out arduino
+        uses: actions/checkout@v2
+        repo: https://github.com/espressif/arduino-esp32.git
+        path: arduino-esp32
       - name: pwd
         run: pwd
       - name: ls -lah
