--- a/test/esp32/Makefile
+++ b/test/esp32/Makefile
@@ -2,10 +2,7 @@ COMPONENT_SRCDIRS := .
 CPPFLAGS += -Wno-error=switch -Wno-error=maybe-uninitialized
 EXTRA_COMPONENT_DIRS += $(IDF_PATH)/components
 EXTRA_COMPONENT_DIRS += ../../
-EXTRA_COMPONENT_DIRS += ./
-EXTRA_COMPONENT_DIRS += $(SOULMATE_PATH)
-EXTRA_COMPONENT_DIRS += $(SOULMATE_PATH)/components
-EXTRA_COMPONENT_DIRS += $(SOULMATE_PATH)/components/FastLED/src
+EXTRA_COMPONENT_DIRS += .
 PROJECT_NAME := soulmate
 MAKEFLAGS +=
 include $(IDF_PATH)/make/project.mk
