--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -16,6 +16,6 @@ jobs:
           repo: https://github.com/espressif/arduino-esp32.git
           path: arduino-esp32
       - name: setup
-        run: . /opt/esp/idf/export.sh
+        run: sh /opt/esp/idf/export.sh
       - name: test
         run: PATH=/opt/esp/tools/xtensa-esp32-elf/1.22.0-97-gc752ad5-5.2.0/xtensa-esp32-elf/bin:$PATH make -C test/esp32
