--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -15,7 +15,5 @@ jobs:
         with:
           repo: https://github.com/espressif/arduino-esp32.git
           path: arduino-esp32
-      - name: setup
-        run: sh /opt/esp/idf/export.sh
       - name: test
-        run: PATH=/opt/esp/tools/xtensa-esp32-elf/1.22.0-97-gc752ad5-5.2.0/xtensa-esp32-elf/bin:$PATH make -C test/esp32
+        run: . /opt/esp/idf/export.sh && PATH=/opt/esp/tools/xtensa-esp32-elf/1.22.0-97-gc752ad5-5.2.0/xtensa-esp32-elf/bin:$PATH make -C test/esp32
