--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -13,7 +13,7 @@ jobs:
           repo: https://github.com/espressif/arduino-esp32.git
           path: arduino-esp32
       - name: run test in docker
-        run: docker run --rm -v $PWD:/project -w /project -it espressif/idf:release-v3.3 make -C test/esp32 -j5 --quiet all
+        run: docker run --rm -v $PWD:/project -w /project espressif/idf:release-v3.3 make -C test/esp32 -j5 --quiet all
   esp32-test:
     runs-on: ubuntu-latest
     name: Test with ESP-IDF
